custom_certs_files/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tls-example-ingress
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
      - ec2-3-21-39-210.us-east-2.compute.amazonaws.com
    secretName: testsecret-tls
  rules:
  - host: ec2-3-21-39-210.us-east-2.compute.amazonaws.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gerrit-service
          servicePort: 8080
      - path: /apple
        backend:
          serviceName: apple-service
          servicePort: 5678
      - path: /banana
        backend:
          serviceName: banana-service
          servicePort: 5678
